tests/NormalTests/paczka1/small_fuzzy/78965584.err
Error in line 2: qDXb9aWVA S814 16,2
Error in line 3: qDXb9aWVA S269 75,3
Error in line 6: qDXb9aWVA A625 51,1
